# Proxy-Based-Load-Balancer

./: README.md  simulate_reqs.sh
example_servers/: Cargo.toml
example_servers/src/: main.rs
proxy_load_balancer/: Cargo.toml
proxy_load_balancer/src/: lib.rs  main.rs
proxy_load_balancer/src/domain/: error.rs  mod.rs
proxy_load_balancer/src/domain/custom_traits/: loadbalancer_strategy.rs  mod.rs
proxy_load_balancer/src/domain/custom_traits_types/: loadbalancer_strategy.rs  mod.rs  server_type.rs
proxy_load_balancer/src/services/: connection_gaurd.rs  load_balancer.rs  mod.rs
proxy_load_balancer/src/services/strategies/: least_connections.rs  mod.rs  round_robin_strategy.rs
proxy_load_balancer/src/utils/: local_types.rs  mod.rs  tracing.rs
