[package]
name = "proxy_load_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
thiserror = "1.0.58"
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-error = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6.0"
scopeguard = "=0.1.2"
futures = "0.3"
async-trait = "0.1.78"
